# MaplePad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_tests.sh  font.c  format.c  format.h  log.txt  log2.txt  log3.txt  log4.txt  maple.c  maple.c.working  maple.h  maple.pio  menu.c  menu.h  pico_sdk_import.cmake  run_tests.sh  ssd1306.c  ssd1306.h  ssd1331.c  ssd1331.h  trace.txt  very_clean.sh
.github/: FUNDING.yml
Icon/: ICONDATA.VMS  Icon.c  IconMono.c  make_icon  make_icon.cpp
KiCad/DriverBoard/: DriverBoard-cache.lib  DriverBoard.kicad_pcb  DriverBoard.net  DriverBoard.pro  DriverBoard.sch
KiCad/DriverBoard/Gerbers/: DriverBoard-B_Cu.gbr  DriverBoard-B_Mask.gbr  DriverBoard-B_SilkS.gbr  DriverBoard-Edge_Cuts.gbr  DriverBoard-F_Cu.gbr  DriverBoard-F_Mask.gbr  DriverBoard-F_SilkS.gbr  DriverBoard-NPTH.drl  DriverBoard-PTH.drl
PhysicalConstruction/: CorkBottom.dxf  PopnMusic9 v31.f3d  PopnMusic9Bottom2.dxf  PopnMusic9LowerMiddle2.dxf  PopnMusic9Top2.dxf  PopnMusic9Top2SmallerSquare.dxf  PopnMusic9UpperMiddle2.dxf  Spacer.dxf
docs/: .~lock.observer diagram.odg#  observer diagram.odg
hardware/: HW_LICENSE.txt  Hardware.MD  MaplePad v1.0 BOM.txt  README.MD  maplepad_bom.txt
hardware/EAGLE/: maplepad_pro.brd  maplepad_pro.sch
images/: jojo1
inc/: GamepadHost.hpp  VibrationObserver.hpp  configuration.h  dreamcast_constants.h  dreamcast_structures.h  global_constants.h  pico_configurations.h  utils.h
inc/hal/Display/: TransientOverlayObserver.hpp  TransientOverlaySubject.hpp
inc/hal/MapleBus/: MapleBusInterface.hpp  MaplePacket.hpp
inc/hal/System/: ClockInterface.hpp  LockGuard.hpp  MutexInterface.hpp  SystemMemory.hpp
inc/hal/Usb/: CommandParser.hpp  DreamcastControllerObserver.hpp  TtyParser.hpp  UsbFile.hpp  UsbFileSystem.hpp  client_usb_interface.hpp  host_usb_interface.hpp  usb_interface.hpp
measurements/: README.md  maple bus test 1.sal  maple bus test 2.sal  maple bus test 3.sal  maple bus test 4.sal  maple bus test 5.sal  maple bus test 6.sal
src/: CMakeLists.txt  display.c  display.h  draw.c  draw.h  font.c  font.h  format.c  format.h  maple.c  maple.h  menu.c  menu.h  sh8601.c  sh8601.h  ssd1306.c  ssd1306.h  ssd1331.c  ssd1331.h  st7789.c  st7789.h  state_machine.c  state_machine.h
src/clientLib/: CMakeLists.txt  DreamcastController.cpp  DreamcastController.hpp  DreamcastKeyboard.hpp  DreamcastMainPeripheral.cpp  DreamcastMainPeripheral.hpp  DreamcastPeripheral.cpp  DreamcastPeripheral.hpp  DreamcastPeripheralFunction.hpp  DreamcastScreen.cpp  DreamcastScreen.hpp  DreamcastStorage.cpp  DreamcastStorage.hpp  DreamcastTimer.cpp  DreamcastTimer.hpp  DreamcastVibration.hpp  README.md
src/hal/: CMakeLists.txt
src/hal/Display/: CMakeLists.txt  Display.cpp  Display.hpp  DisplayIcons.hpp  Font.cpp  Font.hpp  Menu.cpp  Menu.hpp  SSD1331.cpp  SSD1331.hpp
src/hal/DisplayMenu/: CMakeLists.txt  Menu.cpp  Menu.hpp
src/hal/MapleBus/: CMakeLists.txt  MapleBus.cpp  MapleBus.hpp  PioProgram.hpp  maple_in.pio  maple_out.pio
src/hal/System/: CMakeLists.txt  Clock.cpp  Clock.hpp  CriticalSectionMutex.cpp  CriticalSectionMutex.hpp  Mutex.cpp  Mutex.hpp  NonVolatilePicoSystemMemory.cpp  NonVolatilePicoSystemMemory.hpp  PassiveBuzzer.cpp  PassiveBuzzer.hpp  VolatileSystemMemory.cpp  VolatileSystemMemory.hpp
src/hal/Usb/: CMakeLists.txt
src/hal/Usb/Client/: CMakeLists.txt
src/hal/Usb/Client/Common/: UsbCdcTtyParser.cpp  UsbCdcTtyParser.hpp  cdc.cpp  cdc.hpp  msc_disk.cpp  msc_disk.hpp
src/hal/Usb/Client/Hid/: CMakeLists.txt  UsbControllerDevice.cpp  UsbControllerDevice.h  UsbGamepad.cpp  UsbGamepad.h  UsbGamepadDreamcastControllerObserver.cpp  UsbGamepadDreamcastControllerObserver.hpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_execution.cpp
src/hal/Usb/Host/: CMakeLists.txt  Dualshock4Handler.hpp  HidHandler.hpp  hid_app.cpp  hid_app.hpp  tusb_config.h  usb_execution.cpp
src/hostLib/: CMakeLists.txt  DreamcastMainNode.cpp  DreamcastMainNode.hpp  DreamcastNode.hpp  DreamcastSubNode.cpp  DreamcastSubNode.hpp  EndpointTxScheduler.cpp  EndpointTxScheduler.hpp  EndpointTxSchedulerInterface.hpp  PlayerData.hpp  PrioritizedTxScheduler.cpp  PrioritizedTxScheduler.hpp  README.md  ScreenData.cpp  ScreenData.hpp  Transmission.hpp  TransmissionTimeliner.cpp  TransmissionTimeliner.hpp  Transmitter.hpp
src/hostLib/parsers/: MaplePassthroughCommandParser.cpp  MaplePassthroughCommandParser.hpp
src/hostLib/peripherals/: DreamcastArGun.cpp  DreamcastArGun.hpp  DreamcastCamera.cpp  DreamcastCamera.hpp  DreamcastController.cpp  DreamcastController.hpp  DreamcastExMedia.cpp  DreamcastExMedia.hpp  DreamcastGun.cpp  DreamcastGun.hpp  DreamcastKeyboard.cpp  DreamcastKeyboard.hpp  DreamcastMicrophone.cpp  DreamcastMicrophone.hpp  DreamcastMouse.cpp  DreamcastMouse.hpp  DreamcastPeripheral.hpp  DreamcastScreen.cpp  DreamcastScreen.hpp  DreamcastStorage.cpp  DreamcastStorage.hpp  DreamcastTimer.cpp  DreamcastTimer.hpp  DreamcastVibration.cpp  DreamcastVibration.hpp
src/hostLib/test/: CMakeLists.txt  MainNodeTests.cpp  MaplePacketTests.cpp  PrioritizedTxSchedulerTests.cpp  SubNodeTests.cpp
src/hostLib/test/mocks/: MockClock.hpp  MockDreamcastControllerObserver.hpp  MockDreamcastPeripheral.hpp  MockMapleBus.hpp  MockMutex.hpp  MockUsbFileSystem.hpp
src/main/: CMakeLists.txt
src/main/Client/: CMakeLists.txt  client_usb_host.cpp
src/main/Client/common/: led.cpp  led.hpp
src/main/Host/: CMakeLists.txt  host.cpp
src/test/: CMakeLists.txt  main.cpp
